<resources>
    <string name="app_name">PlanUP</string>
    <string name="app_version">1.0.0</string>
    <string name="premium_policy">유료 정책</string>
    <string name="benefit_question">어떤 혜택을 누릴 수 있나요?</string>
    <string name="choose_plan">플랜을 선택해 주세요!</string>
    <string name="benefit_title_1">혜택 1</string>
    <string name="benefit_desc_1">개인 목표 개수 제한 해제</string>
    <string name="benefit_title_2">혜택 2</string>
    <string name="benefit_desc_2">1:1 챌린지 개수 제한 해제</string>
    <string name="benefit_title_3">혜택 3</string>
    <string name="benefit_desc_3">목표 자동 종료일 설정 기능</string>
    <string name="benefit_title_4">혜택 4</string>
    <string name="benefit_desc_4">광고 제거</string>
    <string name="discount_10_percent">10% 할인</string>
    <string name="label_max_discount">최대 할인 적용</string>
    <string name="basic_plan_title">Basic Plan</string>
    <string name="basic_plan_monthly_price">1,900 원 / 1개월</string>
    <string name="basic_plan_yearly_price">20,520 원 / 1년</string>
    <string name="basic_plan_benefit_1">최대 10개까지 개인 목표 추가</string>
    <string name="basic_plan_benefit_2">목표 자동 종료일 설정 기능</string>
    <string name="basic_plan_benefit_3">광고 표시 횟수 50% 감소</string>
    <string name="pro_plan_title">Pro Plan</string>
    <string name="pro_plan_monthly_price">2,900 원 / 1개월</string>
    <string name="pro_plan_yearly_price">31,320 원 / 1년</string>
    <string name="pro_plan_benefit_1">개수 제한 없이 목표 추가</string>
    <string name="pro_plan_benefit_2">목표 자동 종료일 설정 기능</string>
    <string name="pro_plan_benefit_3">1:1 챌린지 개수 제한 해제</string>
    <string name="pro_plan_benefit_4">광고 삭제</string>
    <string name="goal_friend_participation_question">해당 목표에 본인 외에 몇 명의 친구가 참여할 수 있나요?</string>
    <string name="goal_friend_participation_hint">* 0명 이상 입력해 주세요.</string>
    <string name="goal_photo_auth_setting">사진 인증 횟수 설정</string>
    <string name="goal_photo_auth_rate_question">사진 인증 달성률 계산을 위한 질문이에요. 하루에 해당 목표를 몇 번 인증할 예정이신가요?</string>
    <string name="goal_photo_auth_option_1">1번</string>
    <string name="goal_photo_auth_option_2">2번</string>
    <string name="goal_photo_auth_option_3">3번</string>
    <string name="year_unit">%s년</string>
    <string name="month_unit">%s월</string>
    <string name="day_unit">%s일</string>
    <string name="year">연도</string>
    <string name="month">월</string>
    <string name="goal_member_count">%1$d명</string>
    <string name="goal_time">%1$d분 투자</string>
    <string name="goal_time2">%1$d분</string>
    <string name="goal_frequency">주 %1$d회</string>
    <string name="error_invalid_email">* 이메일 형식을 다시 확인해주세요 :)</string>
    <string name="error_email_already_in_use">* 이미 사용 중인 이메일 주소예요.</string>
    <string name="planup_email">planup@email.com</string>
    <string name="signup">회원가입하기</string>
    <string name="hint_email">이메일을 입력하세요.</string>
    <string name="hint_password">비밀번호를 입력하세요.</string>
    <string name="signup_id_input">로그인에 사용할\n아이디를 입력해 주세요</string>
    <string name="signup_email">이메일 입력</string>
    <string name="signup_password_input">로그인에 사용할\n비밀번호를 입력해 주세요</string>
    <string name="signup_password_label_input">비밀번호 입력</string>
    <string name="signup_password_condition_length">8~20자 이내</string>
    <string name="signup_password_condition_complex">숫자, 특수문자 포함</string>
    <string name="signup_password_label_confirm">비밀번호 확인</string>
    <string name="signup_password_condition_match">비밀번호 일치</string>
    <string name="signup_verify_title">본인인증을\n진행해 주세요</string>
    <string name="signup_verify_email_sent">이메일로 링크를 보내드렸어요!</string>
    <string name="profile_setup_title">프로필 설정</string>
    <string name="profile_nickname_label">닉네임 설정</string>
    <string name="profile_nickname_error_duplicate">* 이미 사용 중인 닉네임입니다.</string>
    <string name="profile_nickname_error_length">* 20자 이내로 입력해 주세요.</string>
    <string name="invite_code_share">초대코드를 공유해\n친구와 팔로우하세요!</string>
    <string name="invite_code_input">친구에게\n초대받으셨다면,\n받은 코드를 입력해주세요!</string>
    <string name="invite_code_input_hint">초대코드 입력란</string>
    <string name="friend_added_message">____님과 친구가 되었어요!</string>
    <string name="friend_description">%s님과 친구가 되었어요!</string>
    <string name="friend_new">새로운 친구</string>
    <string name="community_welcome_message">다양한 커뮤니티들이\n____님을 기다리고 있어요!</string>
    <string name="community_category_study">공부하기</string>
    <string name="community_category_reading">독서하기</string>
    <string name="community_category_meditation">명상하기</string>
    <string name="community_category_sleep">수면 패턴 관리</string>
    <string name="community_category_diet">식습관 관리</string>
    <string name="community_category_music">악기 배우기</string>
    <string name="community_category_exercise">운동하기</string>
    <string name="community_category_journal">일기 쓰기</string>
    <string name="find_password_email_desc">가입한 이메일 주소를 입력해 주세요</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="find_password_email_sent">입력 이메일@email.com인증을 위한 \n링크를 보내드렸어요. \n메일함에서 링크를 확인해 주세요.</string>
    <string name="reset_password">비밀번호 재설정</string>
    <string name="password">비밀번호</string>
    <string name="password_requirement_text">비밀번호는 영문, 숫자, 특수문자 중 두 가지 이상을 포함하여 8글자 이상 입력해 주세요.</string>
    <string name="password_confirm_hint">* 위에서 설정한 비밀번호와 동일하게 다시 입력해 주세요.</string>
    <string name="password_change_success_message">입력하신 이메일@email.com 계정의\n비밀번호가 변경되었어요.</string>
    <string name="category_setting">카테고리 설정</string>
    <string name="category_custom_option">직접 설정하기</string>
    <string name="category_cooking">요리하기</string>
    <string name="community_with_friends">친구와 함께</string>
    <string name="community_with_community">커뮤니티와 함께</string>
    <string name="community_see_more">더보기</string>
    <string name="community_create_new">새 커뮤니티 만들기</string>
    <string name="goal_friend_detail">%1$s님의 세부 목표</string>
    <string name="goal_friend_detail_description">친구가 설정한 세부 목표를 그대로 적용할 수 있어요.</string>
    <string name="goal_toeic_study">토익 공부</string>
    <string name="goal_toeic_chapter_study">토익 교재 1챕터씩 공부하기</string>
    <string name="auth_timer">타이머 인증</string>
    <string name="auth_timer_description">타이머 인증을 선택할 시, 유저의 타이머 기록이 성취율 측정 및 랭킹에 반영됩니다.</string>
    <string name="auth_photo">사진 인증</string>
    <string name="auth_photo_description">사진 인증을 선택할 시, 유저의 인증샷 업로드 기록이 성취율 측정 및 랭킹에 반영됩니다.</string>
    <string name="goal_set_shared_with_friend">친구와 공동 목표 설정하기</string>
    <string name="goal_period_select_instruction">선정한 회당 목표를 실시할 기준 기간을 선택하세요.</string>
    <string name="goal_period_weekly">매주</string>
    <string name="goal_period_monthly">매달</string>
    <string name="goal_end_date_instruction">자동으로 목표를 종료할 날을 선택할 수 있어요.</string>
    <string name="goal_end_after_1_week">일주일 뒤</string>
    <string name="goal_end_after_1_month">1개월 뒤</string>
    <string name="goal_end_after_3_months">3개월 뒤</string>
    <string name="goal_end_after_6_months">6개월 뒤</string>
    <string name="goal_end_after_1_year">1년 뒤</string>
    <string name="participant_limit">참여자 수 제한</string>
    <string name="goalComplete">목표 설정이 완료되었어요!</string>
    <string name="share">공유하기</string>
    <string name="share_kakao">카카오톡 공유</string>
    <string name="share_sms">문자 공유</string>
    <string name="share_copy">복사</string>
    <string name="share_more">기타</string>
    <string name="plan">Plan</string>
    <string name="dash">-</string>
    <string name="u_letter">U</string>
    <string name="p_letter">p</string>
    <string name="or_text">or</string>
    <string name="community_greeting">다양한 커뮤니티들이\n%s님을 기다리고 있어요!</string>
    <string name="kakao_app_key">d457e1de9a930076ef76a74e0bb30b6b</string>
    <string name="goal_one_dose">1회 기준 %1$d</string>
    <string name="agreement_title">Plan-Up 이용 약관에\n동의해 주세요</string>
    <string name="agreement_select_all">전체 동의하기</string>
    <string name="agreement_optional_notice">선택 사항에 대한 동의를 거부하는 경우에도 서비스는 이용이 가능합니다.</string>
    <string name="agreement_required_age">[필수] 만 14세 이상입니다</string>
    <string name="agreement_required_terms">[필수] 이용약관 동의</string>
    <string name="agreement_optional_marketing">[선택] 마케팅 목적의 개인정보 수집 및 이용 동의</string>
    <string name="agreement_optional_ad">[선택] 광고성 정보 수신 동의</string>
    <string name="privacy_notice">정보주체의 개인정보 및 권리 보호를 위해 「개인정보 보호법」 및 관계 법령이 정한 바를 준수하여 안전하게 관리하고 있습니다. 자세한 사항은 개인정보처리방침에서 확인할 수 있습니다.</string>
    <string name="category">목록</string>
    <string name="mypage_cur_email">현재 이메일 주소</string>
    <string name="mypage_profile">프로필</string>
    <string name="mypage_nickname">닉네임 변경</string>
    <string name="policy_personal_title">개인정보처리방침</string>
    <string name="policy_personal_title_first">개인정보의 수집 항목 및 목적과 보유 기간\n</string>
    <string name="policy_personal_title_second">개인정보의 제3자 제공</string>
    <string name="policy_personal_title_third">개인정보 처리업무의 위탁</string>
    <string name="policy_personal_title_fourth">개인정보 파기에 관한 사항</string>
    <string name="policy_personal_title_fifth">개인정보 보호책임자</string>
    <string name="policy_personal_content_first">
        Plan-Up (이하 “회사”라 한다)은 「개인정보 보호법」에 따라 이용자의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 정하여 운영하고 있습니다.\n
    </string>
    <string name="policy_personal_content_second">
        회사는 서비스 이용에 필요한 최소한의 개인정보를 수집합니다. 처리하고있는 개인정보는 다음의 수집•이용 목적 이외의 용도로 활용되지 않습니다.
        \n\n① 회원가입 시 다음의 개인정보를 수집 이용합니다.
        \n\n수집 목적
        \n- (필수) : 회원 식별 및 관리, 서비스 이용 만족도 조사, 필수 고지•통지•안내, 업무의 회신, 서비스개선을 위한 분석, 부정행위 방지
        \n- (선택) 마케팅, 프로모션 및 혜택 소식 알림
        \n수집 항목
        \n- 이름, 이메일 주소, 닉네임
        \n- 이메일 회원가입 시 : 비밀번호
        \n- 카카오로그인 연동 : 이메일 주소, 카카오 계정 식별값
        \n보유 및 이용 기간
        \n- 회원탈퇴일로부터 90일
        \n\n➁ 서비스 이용과정에서 아래 자동 수집 정보가 생성되어 저장, 조합, 분석될 수 있습니다.
        \n\t• IP주소, 쿠키, 방문 기록, 서비스 이용기록(구매 및 검색\n\t\t이력, 서비스 사용이력 등), 기기 정보(기기고유번호,\n\t\tOS버전, 모델명, 제조사 정보 등)\n
    </string>
    <string name="policy_personal_content_third">
        회사는 이용자의 개인정보를 개인정보의 처리 목적에서 명시한 범위 내에서만 사용하며, 이용자의 동의, 법률의 특별한 규정 등에 해당하는 경우에만 개인정보를 제3자에게 제공하고 그 이외에는 이용자의 개인정보를 제3자에게 제공하지 않습니다.\n
    </string>
    <string name="policy_personal_content_fourth">
        회사는 원활하고 향상된 서비스를 제공하기 위해서 개인정보 처리 업무를 다른 회사에 위탁할 수 있습니다. 회사는 개인정보 처리 업무 위탁 시 이용자의 개인정보가 안전하게 처리될 수 있도록 관리•감독하며 다른 목적으로 이용자의 개인정보를 처리하지 않도록 제한합니다.\n
    </string>
    <string name="policy_personal_content_fifth">
        ① 회사는 이용자의 개인정보를 원칙적으로 보유•이용기간 경과, 처리목적 달성, 서비스 이용약관에 따른 계약 해지 등 개인정보가 불필요하게 되었을 때에는 지체없이 개인정보를 파기합니다.
        \n➁ 개인정보 파기의 절차 및 방법은 다음 각호와 같습니다.
        \n 1. 파기 절차 회사는 파기 사유가 발생한 개인정보를 개인\n\t정보 보호책임자의 승인 절차를 거쳐 파기합니다.
        \n 2. 파기 방법 회사는 전자적 파일형태로 기록•저장된 개인\n\t정보는 기록을 재생할 수 없도록 파기하며, 종이에 출력\n\t된 개인정보는 분쇄기로 분쇄하거나 소각 등을 통하여\n\t파기합니다.\n
    </string>
    <string name="policy_personal_content_sixth">
        ① 회사는 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.
        \n\t• 개인정보 보호책임자 : 민효빈
        \n\t• 이메일 주소 : carrie92700@gmail.com
        \n② 이용자는 서비스를 이용하시면서 발생한 모든 개인정보보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의할 수 있습니다. 회사는 정보주체의 문의에 대해 지체없이 답변 및 처리해드릴 것입니다.
    </string>
    <string name="goal_name">목표명</string>
    <string name="amount_once">1회 분량</string>
    <string name="challenge_photo_once">1번</string>
    <string name="challenge_photo_twice">2번</string>
    <string name="challenge_photo_three">3번</string>
    <string name="btn_next">다음</string>
    <string name="btn_yes2">예</string>
    <string name="btn_no">아니오</string>
    <string name="error_more_one_word">1글자 이상 작성해주세요.</string>
    <string name="error_less_twenty_word">20자 이내로 작성해주세요.</string>
    <string name="error_less_thirty_word">30자 이내로 작성해주세요.</string>
    <string name="popup_block_friend_title">%1$s님을 차단 해제하시겠어요?</string>
    <string name="popup_block_friend_explain">차단 시, 해당 계정에 알림이 가지 않으며 차단한 이용자에게는 내 계정의 활동및 기록이 보이지 않게 됩니다.</string>
    <string name="dropdown_naver">\@naver.com</string>
    <string name="dropdown_kakao">\@kakao.com</string>
    <string name="dropdown_gmail">\@gmail.com</string>
</resources>