<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/emailBottomSheet"
    android:layout_width="118dp"
    android:layout_height="128dp"
    android:orientation="vertical"
    android:background="@drawable/bg_bottomsheet_round2">

    <TextView
        android:id="@+id/kakaoShareText"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/share_kakao"
        android:fontFamily="@font/pretendard_medium"
        android:textSize="14sp"
        android:textColor="@color/black_300"
        android:paddingVertical="5.5dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />

    <TextView
        android:id="@+id/smsShareText"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/share_sms"
        android:fontFamily="@font/pretendard_medium"
        android:textSize="14sp"
        android:textColor="@color/black_300"
        android:paddingVertical="5.5dp"
        android:paddingStart="8dp" />

    <TextView
        android:id="@+id/copyText"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/share_copy"
        android:fontFamily="@font/pretendard_medium"
        android:textSize="14sp"
        android:textColor="@color/black_300"
        android:paddingVertical="5.5dp"
        android:paddingStart="8dp" />

    <TextView
        android:id="@+id/etcShareText"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/share_more"
        android:fontFamily="@font/pretendard_medium"
        android:textSize="14sp"
        android:textColor="@color/black_300"
        android:paddingVertical="5.5dp"
        android:paddingStart="8dp" />
</LinearLayout>
