<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mypage_policy_personal_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="none">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mypage_policy_personal_inner_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/policy_personal_back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/arrow_left"
                app:layout_constraintBottom_toBottomOf="@id/policy_personal_back_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/policy_personal_back_tv" />

            <TextView
                android:id="@+id/policy_personal_back_tv"
                style="@style/Typography_2XL_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/category"
                app:layout_constraintStart_toEndOf="@id/policy_personal_back_iv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/policy_personal_title_tv"
                style="@style/Typography_XL_Semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/policy_personal_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/policy_personal_back_tv" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@id/policy_personal_title_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="23dp"
                android:nestedScrollingEnabled="true">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/policy_personal_content_first_tv"
                        style="@style/Typography_SM_Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_personal_content_first"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/policy_personal_title_first_tv"
                        style="@style/Typography_SM_Semibold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_personal_title_first"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/policy_personal_content_first_tv"/>

                    <TextView
                        android:id="@+id/policy_personal_content_second_tv"
                        style="@style/Typography_SM_Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_personal_content_second"
                        app:layout_constraintTop_toBottomOf="@id/policy_personal_title_first_tv"/>

                    <TextView
                        android:id="@+id/policy_personal_title_second_tv"
                        style="@style/Typography_SM_Semibold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_personal_title_second"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/policy_personal_content_second_tv"/>

                    <TextView
                        android:id="@+id/policy_personal_content_third_tv"
                        style="@style/Typography_SM_Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_personal_content_third"
                        app:layout_constraintTop_toBottomOf="@id/policy_personal_title_second_tv"/>

                    <TextView
                        android:id="@+id/policy_personal_title_third_tv"
                        style="@style/Typography_SM_Semibold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_personal_title_third"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/policy_personal_content_third_tv"/>

                    <TextView
                        android:id="@+id/policy_personal_content_fourth_tv"
                        style="@style/Typography_SM_Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_personal_content_fourth"
                        app:layout_constraintTop_toBottomOf="@id/policy_personal_title_third_tv"/>

                    <TextView
                        android:id="@+id/policy_personal_title_fourth_tv"
                        style="@style/Typography_SM_Semibold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_personal_title_fourth"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/policy_personal_content_fourth_tv"/>

                    <TextView
                        android:id="@+id/policy_personal_content_fifth_tv"
                        style="@style/Typography_SM_Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_personal_content_fifth"
                        app:layout_constraintTop_toBottomOf="@id/policy_personal_title_fourth_tv"/>

                    <TextView
                        android:id="@+id/policy_personal_title_fifth_tv"
                        style="@style/Typography_SM_Semibold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_personal_title_fifth"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/policy_personal_content_fifth_tv"/>

                    <TextView
                        android:id="@+id/policy_personal_content_sixth_tv"
                        style="@style/Typography_SM_Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_personal_content_sixth"
                        app:layout_constraintTop_toBottomOf="@id/policy_personal_title_fifth_tv"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>