<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="28dp">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/friendGoalTitleText"
        style="@style/Typography_2XL_Semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_friend_detail"
        android:textColor="@color/black_400"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon"
        android:layout_marginTop="31dp"/>

    <TextView
        android:id="@+id/friendGoalDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/goal_friend_detail_description"
        android:textColor="@color/black_300"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friendGoalTitleText" />

    <TextView
        android:id="@+id/goalNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_name"
        android:textSize="18sp"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="@color/black_400"
        app:layout_constraintTop_toBottomOf="@id/backIcon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="120dp" />

    <EditText
        android:id="@+id/nicknameEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="155dp"
        android:background="@drawable/bg_edittext_rounded"
        android:fontFamily="@font/pretendard_medium"
        android:hint="@string/goal_toeic_study"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/black_300"
        android:textColorHint="@color/black_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backIcon" />

    <TextView
        android:id="@+id/goalNameMinLengthHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_more_one_word"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_medium"
        android:textColor="@color/red_300"
        app:layout_constraintTop_toBottomOf="@id/backIcon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="203dp" />

    <TextView
        android:id="@+id/goalNameMaxLengthHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_less_twenty_word"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_medium"
        android:textColor="@color/red_300"
        android:layout_marginTop="203dp"
        app:layout_constraintTop_toBottomOf="@id/backIcon"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/goalVolumeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_once"
        android:textSize="18sp"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="@color/black_400"
        app:layout_constraintTop_toBottomOf="@id/backIcon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="244dp" />

    <TextView
        android:id="@+id/goal_period_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="한 번 실천할 때의 구체적인 분량을 적어주세요."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalVolumeLabel" />

    <EditText
        android:id="@+id/goalVolumeEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/goal_toeic_chapter_study"
        android:textSize="16sp"
        android:background="@drawable/bg_edittext_rounded"
        android:padding="8dp"
        android:fontFamily="@font/pretendard_medium"
        android:layout_marginTop="6dp"
        android:textColorHint="@color/black_200"
        android:textColor="@color/black_300"
        app:layout_constraintTop_toBottomOf="@id/goal_period_description_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/goalVolumeMinLengthHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_more_one_word"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_medium"
        android:textColor="@color/red_300"
        app:layout_constraintTop_toBottomOf="@id/goalVolumeEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/goalVolumeMaxLengthHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_less_thirty_word"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_medium"
        android:textColor="@color/red_300"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/goalVolumeEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/nextButton"
    android:layout_width="0dp"
    android:layout_height="44dp"
    android:text="@string/btn_next"
    android:textSize="16sp"
    android:textColor="@color/white"
    android:fontFamily="@font/pretendard_medium"
    android:background="@drawable/btn_next_background"
    android:gravity="center"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>