<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup_unblock">

    <TextView
        android:id="@+id/popup_block_title_tv"
        style="@style/TextAppearance.Pretendard.Medium.SM"
        android:layout_width="260dp"
        android:layout_height="24dp"
        android:gravity="center"
        android:text="@string/popup_block_friend_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popup_block_description_tv"
        style="@style/Typography_S_Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/popup_block_friend_explain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_block_title_tv" />

    <TextView
        android:id="@+id/popup_friend_no_btn"
        style="@style/Typography_SM_Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_btn_transparent"
        android:text="@string/btn_no"
        android:textAlignment="center"
        android:textColor="@color/black_300"
        app:layout_constraintTop_toTopOf="@id/popup_friend_yes_btn"
        app:layout_constraintEnd_toStartOf="@id/popup_friend_yes_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/popup_friend_yes_btn"
        style="@style/Typography_SM_Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_blue"
        android:text="@string/btn_yes2"
        android:textColor="@color/white_font"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/popup_block_description_tv"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/popup_friend_no_btn"/>


</androidx.constraintlayout.widget.ConstraintLayout>