<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="70dp"
    android:layout_height="87dp"
    android:background="@drawable/bg_dropdown_photo_nmber">
    <TextView
        android:id="@+id/popup_challenge_photo_once_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_photo_once"
        android:textColor="@color/black_400"
        style="@style/Typography_SM_Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/popup_challenge_photo_twice_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_photo_twice"
        android:textColor="@color/black_400"
        style="@style/Typography_SM_Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_challenge_photo_once_tv"
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/popup_challenge_photo_three_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_photo_three"
        android:textColor="@color/black_400"
        style="@style/Typography_SM_Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_challenge_photo_twice_tv"
        android:layout_marginTop="2dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>